# myxine

./: .gitignore  API.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  cabal.project  enabled-events.json
.github/: dependabot.yml
clients/haskell/: enabled-events.json  myxine-client.cabal  stack.yaml
clients/haskell/examples/circles/: Main.hs
clients/haskell/src/: Myxine.hs
clients/haskell/src/Myxine/: ConjMap.hs  Direct.hs  Event.hs  EventLoop.hs  EventStream.hs  Handlers.hs  Page.hs  Reactive.hs  TH.hs  Target.hs  Widget.hs
clients/haskell/src/Myxine/Internal/: Event.hs  EventStream.hs  TH.hs
clients/python/: README.md  myxine.py  setup.py
clients/python/myxine/: __init__.py  myxine.py
core/: Cargo.toml  README.md
core/src/: lib.rs  page.rs  session.rs
core/src/page/: content.rs  query.rs  subscription.rs
examples/: angles-fancy.py  angles.py  angles.rs  circles.py  myxine.py  spin.rs
examples/haskell/: CHANGELOG.md  Counter.hs  Todo.hs  Toggles.hs  circles.hs  myxine-client-examples.cabal
examples/python/: angles.py  circles.py  follow.py
examples/rust/: angles.rs  spin.rs
myxine/: Cargo.toml
myxine/src/: main.rs  page.rs  server.rs  session.rs  unique.rs
myxine/src/page/: content.rs  dynamic.html  id.rs  query.rs  sse.rs  subscription.rs
myxine/src/server/: heartbeat.rs  params.rs
myxine/src/server/assets/: diffhtml.min.js  dynamic-page.js
notes/: all-window-event-names.txt  all-window-events.json  bubbles.json  bubbling-document-event-names.txt  bubbling-document-events.json  bubbling-events.json  bubbling-window-events.json  event-hierarchy.dot  events.json  interfaces.json  no-bubble.json  non-bubbling-events.json  non-bubbling-window-events.json  scrape-bubbles.js  window-vs-bubbling-document.txt  yes-bubble.json
scripts/: generate-event-enum.py  generate-event-map.py  scrape-event-info.js
server/: Cargo.toml
server/src/: connect.js  dynamic.js  enabled-events.json  lib.rs  main.rs  old-server.rs  page.rs  params.rs  server.rs  session.rs  unique.rs
server/src/page/: content.rs  dynamic.html
server/src/server/: connect.js  dynamic.js  params.rs
server/src/server/assets/: dynamic-page.js
src/: dynamic.html  events.rs  heartbeat.rs  main.rs  page.rs  params.rs  select.rs  server.rs  windowing.rs
src/page/: content.rs  dynamic.html  events.rs  sse.rs  subscription.rs
src/page/events/: path.rs
src/server/: heartbeat.rs  params.rs
src/server/assets/: diffhtml.min.js  dynamic-page.js  enabled-events.json  post.js  send-event.js
