[package]
name = "myxine"
version = "0.1.0"
authors = ["Kenny Foner <kwf@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
http = "0.2.0"
hyper-usse = { git = "https://github.com/kwf/hyper-usse" }
futures = "0.3.1"
tokio = { version = "0.2.4", features = ["full"] }
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
itertools = "0.8.2"