[package]
name = "myxine-core"
version = "0.1.0"
description = "The core library powering the Myxine GUI server."
keywords = ["GUI", "web", "interface", "scripting", "tool"]
categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
homepage = "https://github.com/GaloisInc/myxine"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hopscotch = "0.1.1"
futures = "0.3"
tokio = { version = "0.2.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
