[package]
name = "myxine"
version = "0.1.0"
description = "Get a GUI fast in any language under the sea"
keywords = ["GUI", "web", "interface", "scripting", "tool"]
categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
homepage = "https://github.com/GaloisInc/myxine"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hopscotch = "0.1.1"
warp = { version = "0.2" }
hyper = "0.13"
http = "0.2"
futures = "0.3"
tokio = { version = "0.2.2", features = ["full"] }
percent-encoding = "2.1"
itertools = "0.9"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
bytes = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
either = "1.5"
lazy_static = "1.4"

[dev-dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }

[[bin]]
name = "myxine"
