[package]
name = "myxine"
version = "0.1.0"
description = "Get a GUI fast in any language under the sea"
keywords = ["GUI", "web", "interface", "scripting", "tool"]
categories = ["command-line-utilities", "graphics", "gui", "visualization", "web-programming"]
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
homepage = "https://github.com/GaloisInc/myxine"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
myxine-core = { path = "../core", version = "0.1.0" }
hopscotch = "0.1.1"
warp = { version = "0.2" }
hyper = "0.13"
http = "0.2"
futures = "0.3"
tokio = { version = "0.2.2", features = ["full"] }
percent-encoding = "2.1"
structopt = "0.3"
serde_json = "1.0"
serde_urlencoded = "0.6"
bytes = "0.5"
lazy_static = "1.4"

[dev-dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }

[[bin]]
name = "myxine"
