cabal-version:       2.4
name:                myxine-client
version:             0.0.1.0
synopsis:            A thin Haskell client for the Myxine GUI server
-- description:
homepage:            https://github.com/GaloisInc/myxine
bug-reports:         https://github.com/GaloisInc/myxine/issues
license:             MIT
license-file:        LICENSE
author:              Kenny Foner
maintainer:          kwf@galois.com
copyright:           Copyright (c) 2020 Galois, Inc.
category:            Graphics
extra-source-files:  CHANGELOG.md, enabled-events.json

common options
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

common deps
  build-depends:       base ^>=4.13.0.0,
                       req,
                       aeson,
                       text,
                       transformers,
                       bytestring,
                       unordered-containers,
                       dependent-map,
                       dependent-sum,
                       template-haskell,
                       hashable,
                       file-embed,
                       http-client,
                       http-types

library
  import:              deps, options
  exposed-modules:     Myxine
  other-modules:       Myxine.Page
                       Myxine.Target
                       Myxine.Handlers
                       Myxine.Event
                       Myxine.EventStream
                       Myxine.EventLoop
                       Myxine.TH
                       Paths_myxine_client
  default-extensions:
  hs-source-dirs:      src

executable circles
  import:              options
  build-depends:       base ^>=4.13.0.0,
                       myxine-client,
                       text,
                       bytestring,
                       blaze-html,
                       blaze-markup,
                       random
  main-is:             Main.hs
  hs-source-dirs:      examples/circles

test-suite myxine-client-test
  import:              options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base ^>=4.13.0.0,
                       myxine-client,
                       text,
                       bytestring
